# classify-by-data

./: .gitignore  README.md  extraction.py  pyproject.toml  selection.html  selection.py  week 1.py  week 3.py  week 4-1.py  week 4.py  week 6-1.py  week 6.py  week 7.py  week 8.py
